k8s/deployment-eu-de-1.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: vcf-automation
spec:
  selector:
    matchLabels:
      app: vcf-automation
  template:
    metadata:
      labels:
        app: vcf-automation
    spec:
      containers:
        - name: automation
          image: keppel.eu-de-1.cloud.sap/ccloud/vcf-automation:latest
          command:
            - "/pulumi/bin/automation"
            - "server"
          volumeMounts:
            - mountPath: /pulumi/automation/etc
              subPath: etc
              name: pvc
          ports:
            - containerPort: 8080
              name: api
      volumes:
        - name: pvc
          persistentVolumeClaim:
            claimName: vcf-workspace
