k8s/pod-ap002.yaml
apiVersion: v1
kind: Pod
metadata:
  name: vcf-automation-ap002
  labels:
    app: vcf-automation
spec:
  containers:
    - name: automation
      image: keppel.eu-de-1.cloud.sap/ccloud/vcf-automation:9a3110c-dirty
      command:
        - "/pulumi/bin/automation"
        - "server"
      volumeMounts:
        - mountPath: /pulumi/automation/etc
          subPath: etc
          name: oldpvc
        - mountPath: /pulumi/automation/etc-new
          subPath: etc
          name: pvc
      ports:
        - containerPort: 8080
          name: api
  volumes:
    - name: pvc
      persistentVolumeClaim:
        claimName: vcf-workspace
    - name: oldpvc
      persistentVolumeClaim:
        claimName: ccmaas-workspace
