k8s/pod-debug.yaml
apiVersion: v1
kind: Pod
metadata:
  name: vcf-automation
spec:
  containers:
    - name: automation
      image: keppel.eu-de-1.cloud.sap/ccloud/vcf-automation:latest
      command: ["/bin/bash", "-c", "--"]
      args: ["trap : TERM INT; sleep infinity & wait"]
      volumeMounts:
        - mountPath: /pulumi/automation/etc
          subPath: etc
          name: pvc
      ports:
        - containerPort: 8080
          name: api
  volumes:
    - name: pvc
      persistentVolumeClaim:
        claimName: vcf-workspace
