k8s/pod-dev.yaml
apiVersion: v1
kind: Pod
metadata:
  name: vcf-automation-dev
  labels:
    app: vcf-automation
spec:
  containers:
    - name: automation
      image: keppel.eu-de-1.cloud.sap/ccloud/vcf-automation
      command:
        - "/pulumi/bin/automation"
        - "server"
      volumeMounts:
        - mountPath: /pulumi/automation/etc
          subPath: etc
          name: oldpvc
      ports:
        - containerPort: 8080
  volumes:
    - name: oldpvc
      persistentVolumeClaim:
        claimName: ccmaas-workspace
