k8s/pod-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: vcf-automation-test
  labels:
    app: vcf-automation-test
spec:
  containers:
    - name: automation
      image: keppel.eu-de-1.cloud.sap/ccloud/vcf-automation
      command:
        - "/pulumi/bin/automation"
        - "server"
      volumeMounts:
        - mountPath: /pulumi/automation/etc
          subPath: etc
          name: pvc
        - mountPath: /pulumi/automation/etc2
          subPath: etc
          name: oldpvc
      ports:
        - containerPort: 8080
          name: api
  volumes:
    - name: pvc
      persistentVolumeClaim:
        claimName: vcf-workspace
    - name: oldpvc
      persistentVolumeClaim:
        claimName: ccmaas-workspace
