k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: avocado-automation-test
  labels:
    app: avocado-automation
spec:
  containers:
    - name: automation
      image: keppel.eu-de-1.cloud.sap/ccloud/avocado-automation:latest
      command:
        - "/pulumi/bin/automation"
        - "server"
      volumeMounts:
        - mountPath: /pulumi/avocado/etc
          subPath: etc
          name: pvc
      ports:
        - containerPort: 8080
          name: api
  volumes:
    - name: pvc
      persistentVolumeClaim:
        claimName: ccmaas-workspace
