k8s/service-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: vcf-automation-test
  labels:
    app: vcf-automation-test
spec:
  selector:
    app: vcf-automation-test
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
