k8s/ingress-eu-de-1.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: vcf-automation
  annotations:
    disco: "true"
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
        - vcf-automation.eu-de-1.cloud.sap
      secretName: tls-vcf-automation
  rules:
    - host: vcf-automation.eu-de-1.cloud.sap
      http:
        paths:
          - backend:
              serviceName: vcf-automation
              servicePort: 8080
            path: /
